リファクタリング第一弾 ・非同期化 ・名前空間とフォルダを整理 ・ダークモード対応 ・nugetパッケージの更新

--- a/DevSamples/Pages/Index.razor
+++ b/DevSamples/Pages/Index.razor
@@ -1,4 +1,5 @@
 ﻿@page "/"
+@using MyWorkDashboard.Shared
 
 
 <SortableContainer TItem="ViewItem" Items="items" @ref="_container" SelectedStyle="background-color: red;">
